# gaka-rs

./: .gitignore  Cargo.toml  README.md  build.rs
assets/models/: teapot_bezier.txt
assets/shaders/: curve.vert  mesh.frag  mesh.vert  normals.frag  phong.frag  triangle.frag  triangle.vert  vertexShader.vert
examples/: bezier_editor.rs  bezier_surface.rs  teapot.rs  triangle.rs
gaka-rs/: Cargo.toml
gaka-rs/assets/shaders/: curve.frag  curve.vert
gaka-rs/src/: asset_manager.rs  lib.rs  rendering.rs
gaka-rs/src/geometry/: curves.rs
gaka-rs/src/rendering/: opengl.rs  renderer.rs  vertex.rs
gaka-rs/src/rendering/opengl/: gl_object.rs  gl_program.rs  gl_renderer.rs  gl_vertex.rs
gaka_demo/: Cargo.toml
gaka_demo/src/: main.rs
glad-gl/: Cargo.toml
glsl/: fragmentShader.frag  vertexShader.vert
shaders/: basic.hlsl
src/: asset_manager.rs  constants.rs  geometry.rs  gl_renderer.rs  graphics.rs  lib.rs  main.rs  rendering.rs
src/backends/: mod.rs
src/backends/glad2/: mod.rs  triangle.rs
src/backends/glium/: triangle.rs
src/geometry/: algorithms.rs  curves.rs  mesh.rs  primitives.rs  splines.rs  surfaces.rs
src/graphics/: vulkan.rs
src/graphics/vulkan/: command_buffer.rs  context.rs  device.rs  errors.rs  graphics_pipeline.rs  swapchain.rs  utils.rs
src/rendering/: camera.rs  gl_program.rs  gl_renderer.rs  lights.rs  mesh.rs  mod.rs  object.rs  opengl.rs  scene.rs  vertex.rs  windowing.rs
src/rendering/glad2/: triangle.rs
src/rendering/opengl/: gl_object.rs  gl_objects.rs  gl_program.rs  gl_renderer.rs  gl_texture.rs  program.rs  utils.rs
src/scenegraph/: material.rs  node.rs  scene.rs
