[package]
name = "gaka-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { version = "*" }
glutin = { version = "^0.30" }
env_logger = "0.10.0"
log = "0.4.17"
nalgebra-glm = "0.18.0"

