[package]
name = "gaka_demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "^0.28" }
raw-window-handle = "^0.5"
glutin = { version = "^0.30" }
glutin-winit = { version = "^0.3" }
gaka-rs = { path = "../gaka-rs" }
nalgebra-glm = "0.18.0"

env_logger = "0.10.0"
log = "0.4.17"

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
strip = true
